[gd_scene load_steps=2 format=3 uid="uid://06n6mjdqek0j"]

[ext_resource type="Script" path="res://game/levels/one_time_audio_trigger.gd" id="1_5882s"]

[node name="OneTimeAudioTrigger" type="Area2D"]
collision_layer = 0
script = ExtResource("1_5882s")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Voices"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
